app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-only-sass/fonts/bootstrap/";

// KIOSK COLORS
$white: #fff;
$black: #000;
$gray1: #f2f2f2;
$gray2: #e6e6e6;
$gray3: #d1cfcd;
$gray4: #a49f9b;
$gray5: #7d7874;
$gray6: #45413d;
$red: #f34c51;
$blue: #00b8d0;
$green: #03763a;
$yellow: #fdd73e;
$borderColor: #DDD;

$kioskfonts: "Avenir Next", "Helvetica Neue", Helvetica, sans-serif;

// bower:scss
@import "bootstrap-only-sass/stylesheets/_bootstrap.scss";
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

* {
  font-family: 'Avenir Next', Helvetica, sans-serif;
}

/*
  Allow angular.js to be loaded in body, hiding cloaked elements until
  templates compile.  The !important is important given that there may be
  other selectors that are more specific or come later and might alter display.
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

footer.footer{
  position:fixed;
  bottom:0px;
  right:0px;
  padding:0.1px 5px;
}

.navbar {
  margin-bottom:10px;
  a{
    color: black;
  }
  i {
    font-size: 3em;
  }
  .navbar-brand {
    height: 50px;
    margin: 0px;
    padding: 0px;
    line-height: 50px;
    color: black;
    img {
      height: 47px;
      display: inline-block;
      vertical-align: middle;
    }
  }
  .navbar-icon {
    padding-bottom: 0;
    padding-top: 5px;
  }
  .navbar-nav > li > .dropdown-menu{
    box-sizing: content-box;
    li{
      padding:3px;
    }
  }
  .navbar-right{
    margin-top:11px;
  }
  .navbar-container{
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 7px;
    margin-top:4px;
  }
}
.btn-link{
  color: $black;
  text-decoration:underline;
}

.debug {
  visibility: hidden;
  display: none;
}
html, body{
  height:100%
}

.flex-container{
  display: flex;
}
.flex-item{
  flex-grow: 0;
}
.container-full {
  margin: 0 auto;
  width: 100%;
}
#main-page-carousel{
  height:300px;
  .carousel-indicators li{
    border:1px solid #333;
  }
}
#main-page{
  height: 80%;
  min-height: 400px;
  padding:0px 15px;
  .landing-iamge{
    background-image: url('/images/Splash-Default-UTA.jpg');
    background-size: cover;
    background-position: center, center;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height:80%;
    min-height: 500px;
    z-index:-9999;
  }

  .landing-plan{
    height:80%;
    width:100%;
    min-height:240px;
    display:flex;
    justify-content:center;
  }
  .landing-plan-centered{
    width:100%;
    align-self:center;
  }
  .landing-plan-content{
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 10px;
    padding:10px 20px 10px 30px;
  }
  .landing-splash-middle{
    width:100%;
  }
  .landing-splash-footer{
    position:absolute;
    bottom:0px;
    left:0px;
    width:100%;
  }

  #splash-search-form select {
    width: initial;
  }
  #splash-search-form{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: stretch;
  }
  #splash-search-form .block-one{
    margin: 3px 0px;
    display:flex;
    flex: 10 1 500px;
    flex-wrap: wrap;
    flex-direction:row;
  }
  .block-ok{
    margin: 13px 0px;
    display:flex;
    flex: 10 1 500px;
    flex-wrap: wrap;
    flex-direction:column;
  }
  #splash-search-form .block-two{
    margin: 3px 0px;
    display:flex;
    flex: 1 1 510px;
    flex-wrap: wrap;
    flex-direction:row;
    justify-content: space-between;
  }
  #splash-search-form .block-one > *{
    flex: 1 1 251px;
  }
  #splash-search-form .block-two > select{
    flex: 4 1 190px;
  }
  #splash-search-form .block-two > datetimepicker{
    flex: 0 0 290px;
  }
  #splash-search-form .block-two > button{
    flex: 0 0 auto;
  }
}


#main-template-container{
  height: calc(100% - 70px);
}

.ride_itineraries{
  margin:5px 0px;
}
.line-border{
  border:1px solid $borderColor;
  border-radius:8px;
}
.bordered{
  border:1px solid $borderColor;
  border-radius:8px;
  padding: 7px 9px;
  margin: 11px 0px;
  background-color: #FFF;
}
.top-border-hr{
  border-top:1px solid $borderColor;
  margin-top:10px;
  padding-top:10px;
}
.nav > li > a:hover,
.nav > li > a:focus {
  background-color:unset;
}
.mode-options .mode,
.trip-question{
  background-color:#EEE;
  margin:7px 3px;
  border-radius:5px;
  label{
    padding:3px 7px;
  }
  label:hover{
    cursor:pointer;
  }
}
.no-outline,
.ride_itineraries .bordered .no-outline{
  outline:none;
}
.map-canvas{
  height:100%;
  width:100%;
}
.row-eq-height{
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.schedule-row{
  padding:3px;
  justify-content:center;
}
.transit-directions{
  margin: 15px 0px;
  padding: 0px 15px;
}
.ride_itineraries .transit-details{
  padding:5px 2px;
}
.stripe-row:nth-child(even),
.transit-details:nth-child(even),
.schedule-row:nth-child(even){
  background-color:#EEE;
}
.stripe-row:nth-child(odd),
.transit-details:nth-child(odd),
.schedule-row:nth-child(odd){
  background-color:#FFF;
}
body{
  background-color: #F0F0FF;
}

@media (min-width: 1200px) {
  .col-lg-offset-small{
    margin-left:3%;
  }
  .bordered{
    padding: 13px 17px;
  }
}
.ride-planner-menu{
  background-color:#FFF;
  padding:5px 0px;
}
.ride-mode-service-name{
  display:inline-block;
  margin:0px 0px 0px 3%;
}
.display-inline{
  display:inline;
}
#login-nav{
  .alert{
    padding:0px;
    margin-bottom:0px;
  }
}
.ng-untouched + .alert{
  display:none;
}
.ng-untouched + .alert .error{
  display:inline-block;
}
.ng-untouched + .alert .error.ng-hide{
  display:none;
}
.walk-info > .steps{
  margin:3px 0px;
  padding:2px;
}
.walk-info > .steps:nth-child(even){
  background-color:#eee;
}
ul.language-menu-dropdown{
  width: 100px;
  li:hover{
    background-color:#EEE;
  }
}
#signup-dropdown, 
#login-dropdown{
  padding:7px;
}
.container-fluid{
  padding-bottom: 20px;
}
@media (min-width: 0) and (max-width: $screen-xs-max){
  .container-fluid{
    width:100%;
  }
  .padded-transit-map{
    padding-top:35px;
  }
}
@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max){
  .container-fluid{
    width:100%;
  }
  .padded-transit-map{
    padding-top:35px;
  }
}
@media (min-width: $screen-md-min) and (max-width: $screen-md-max){
  .container-fluid{
    width: 100%;
  }
  .padded-transit-map{
    padding-top:70px;
  }

}
@media (min-width: $screen-lg-min) {
  .padded-transit-map{
    padding-top:70px;
  }
  .container-fluid{
    width: $screen-lg-min;
  }
}

@media(min-height: $screen-lg-min){
  #main-page .landing-plan-centered{
    margin-top: 14em;
  }
}

@media (min-width: 0) and (max-width: $screen-sm-min){
  .ride_itineraries .map-canvas{
    height:20em !important;
  }
}
@media (min-width: $screen-sm-min) {
  .ride_itineraries .map-canvas{
    height:40em !important;
  }
}

#rides-itineraries-loading{
  position: absolute;
  top: 0px;
  margin: 0px auto;
  width: calc(100% - 30px);
  height: 100%;
  /* max-height: 600px; */
  text-align: center;
  background-color: rgba(240, 240, 255, .9);
}

.sk-circle {
  margin: 100px auto;
  width: 40px;
  height: 40px;
  position: relative;
  .sk-child {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
  }
  .sk-child:before {
    content: '';
    display: block;
    margin: 0 auto;
    width: 15%;
    height: 15%;
    background-color: #333;
    border-radius: 100%;
    -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
            animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
  }
  .sk-circle2 {
    -webkit-transform: rotate(30deg);
        -ms-transform: rotate(30deg);
            transform: rotate(30deg); }
  .sk-circle3 {
    -webkit-transform: rotate(60deg);
        -ms-transform: rotate(60deg);
            transform: rotate(60deg); }
  .sk-circle4 {
    -webkit-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
            transform: rotate(90deg); }
  .sk-circle5 {
    -webkit-transform: rotate(120deg);
        -ms-transform: rotate(120deg);
            transform: rotate(120deg); }
  .sk-circle6 {
    -webkit-transform: rotate(150deg);
        -ms-transform: rotate(150deg);
            transform: rotate(150deg); }
  .sk-circle7 {
    -webkit-transform: rotate(180deg);
        -ms-transform: rotate(180deg);
            transform: rotate(180deg); }
  .sk-circle8 {
    -webkit-transform: rotate(210deg);
        -ms-transform: rotate(210deg);
            transform: rotate(210deg); }
  .sk-circle9 {
    -webkit-transform: rotate(240deg);
        -ms-transform: rotate(240deg);
            transform: rotate(240deg); }
  .sk-circle10 {
    -webkit-transform: rotate(270deg);
        -ms-transform: rotate(270deg);
            transform: rotate(270deg); }
  .sk-circle11 {
    -webkit-transform: rotate(300deg);
        -ms-transform: rotate(300deg);
            transform: rotate(300deg); }
  .sk-circle12 {
    -webkit-transform: rotate(330deg);
        -ms-transform: rotate(330deg);
            transform: rotate(330deg); }
  .sk-circle2:before {
    -webkit-animation-delay: -1.1s;
            animation-delay: -1.1s; }
  .sk-circle3:before {
    -webkit-animation-delay: -1s;
            animation-delay: -1s; }
  .sk-circle4:before {
    -webkit-animation-delay: -0.9s;
            animation-delay: -0.9s; }
  .sk-circle5:before {
    -webkit-animation-delay: -0.8s;
            animation-delay: -0.8s; }
  .sk-circle6:before {
    -webkit-animation-delay: -0.7s;
            animation-delay: -0.7s; }
  .sk-circle7:before {
    -webkit-animation-delay: -0.6s;
            animation-delay: -0.6s; }
  .sk-circle8:before {
    -webkit-animation-delay: -0.5s;
            animation-delay: -0.5s; }
  .sk-circle9:before {
    -webkit-animation-delay: -0.4s;
            animation-delay: -0.4s; }
  .sk-circle10:before {
    -webkit-animation-delay: -0.3s;
            animation-delay: -0.3s; }
  .sk-circle11:before {
    -webkit-animation-delay: -0.2s;
            animation-delay: -0.2s; }
  .sk-circle12:before {
    -webkit-animation-delay: -0.1s;
            animation-delay: -0.1s; }
}

@-webkit-keyframes sk-circleBounceDelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
            transform: scale(0);
  } 40% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}

@keyframes sk-circleBounceDelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
            transform: scale(0);
  } 40% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}

.leg-start-time,
.leg-end-time{
  position:absolute;
  top:-15px;
  left:-5px;
  border:1px solid $borderColor;
  border-radius:13px;
  padding:3px;
  background-color:white;
}
.leg-end-time{
  top:unset;
  bottom:-15px;
  z-index:3;
}
#my-rides{
  .itinerary-details{
    padding-right:1em;
    padding-left:1em;
  }
  .my-more-trip-details:hover{
    cursor:default;
  }
  .my-show-tab.show-future.future,
  .my-show-tab.show-past.past{
    background-color:#DDD;
  }
  .cancelled{
    background-color:#DDD;
  }
  .row{
    height:100%;
  }
}
.btn-bordered{
  border:1px solid #DDD;
}
.email-or-cancel{
  margin-top:1.5em;
}

.prebooking_questions{
  .row{
    padding:15px 0px;
  }
}
.btn.disabled{
  pointer-events:none;
}
body .btn.btn-link{
  text-decoration:none;
}

